<resources>
    <string name="app_name">GeoCamera</string>
    <string name="take">Take a photo</string>
    <string name="share">share</string>
    <string name="photo">Photo shown below</string>
    <string name="title_location_permission">permission</string>
    <string name="text_location_permission">can not get location without your permission</string>
    <string name="gps_network_not_enabled">Gps is not enabled</string>
    <string name="open_location_settings">open settings</string>
    <string name="get_longitude">Longitude is</string>
    <string name="get_latitude">latitude is</string>
    <string name="location">Location</string>
    <string name="splash_text">Know exactly where you are</string>
</resources>
