<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/take"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:icon="@drawable/ic_camera_black_24dp"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_secondary_variant"
            android:enabled="false"
            android:padding="8dp"
            android:text="@string/share"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:icon="@drawable/ic_share_black_24dp"
            app:iconGravity="end" />

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/photo"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text1"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:padding="4dp"
        android:text="@string/location"
        android:textColor="@color/textColorPrimary"
        android:textSize="24sp" />

</com.google.android.material.circularreveal.CircularRevealLinearLayout>
